--- a/index.html
+++ b/index.html
@@ -19,58 +19,193 @@
             <div class="container">
                 <h2>Quanti Giocatori?</h2>
                 <ul class="ms-row player-list">
-                    <li class="players">1 Giocatori</li>
-                    <li class="players">2 Giocatori</li>
-                    <li class="players">3 Giocatori</li>
-                    <li class="players">4 Giocatori</li>
+                    <li class="num-players"><button id="play1">1 Giocatori</button></li>
+                    <li class="num-players"><button id="play2">2 Giocatori</button></li>
+                    <li class="num-players"><button id="play3">3 Giocatori</button></li>
+                    <li class="num-players"><button id="play4">4 Giocatori</button></li>
                 </ul>
             </div>
         <section id="player-cards">
             <div class="container">
                 <!--1 giocatore-->
-                <div class="one-player">
-                    <div class="p1">
-                        <h2>Player 1</h2>
-                        <div class="P1-card">
-
+                <div class="n-players">
+                    <div class="players">
+                        <div class="p1">
+                            <h2>Player 1</h2>
+                            <div class="p1-card ms-row">
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>  
+                            </div>
                         </div>
                     </div>
-                </div>
+                </div>    
                 <!--2 giocatori-->
-                <div class="two-player">
-                    <!--giocatore 1-->
-                    <div class="p1">
-                        <h2>Player 1</h2>
-                        <div class="P1-card">
-
+                <div class="n-players">
+                    <div class="players">
+                        <!--giocatore 1-->
+                        <div class="p1">
+                            <h2>Player 1</h2>
+                            <div class="p1-card ms-row">
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>  
+                            </div>
+                        </div>
+                        <!--giocatore 2-->
+                        <div class="p2">
+                            <h2>Player 2</h2>
+                            <div class="p2-card ms-row">
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>  
+                            </div>
                         </div>
                     </div>
-                    <!--giocatore 2-->
-                    <div class="p2">
-                        <h2>Player 2</h2>
-                        <div class="P2-card">
-
-                        </div>
-                    </div>
-                </div>
+                </div>    
                 <!--3 giocatori-->
-                <div class="three-player">
-                    <div class="p1">
-                        <h2>Player 1</h2>
-                        <div class="P1-card">
-
+                <div class="n-players">
+                    <div class="players">
+                        <!--giocatore 1-->
+                        <div class="p1">
+                            <h2>Player 1</h2>
+                            <div class="p1-card ms-row">
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>  
+                            </div>
+                        </div>
+                        <!--giocatore 2-->
+                        <div class="p2">
+                            <h2>Player 2</h2>
+                            <div class="p2-card ms-row">
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>  
+                            </div>
+                        </div>
+                        <!--giocatore 3-->
+                        <div class="p3">
+                            <h2>Player 3</h2>
+                            <div class="p3-card ms-row">
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>  
+                            </div>
                         </div>
                     </div>
-                </div>
+                </div> 
                 <!--4 giocatori-->
-                <div class="four-player">
-                    <div class="p1">
-                        <h2>Player 1</h2>
-                        <div class="P1-card">
-
+                <div class="n-players">
+                    <div class="players">
+                        <!--giocatore 1-->
+                        <div class="p1">
+                            <h2>Player 1</h2>
+                            <div class="p1-card ms-row">
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>
+                                <div class="Number1">num</div>  
+                            </div>
+                        </div>
+                        <!--giocatore 2-->
+                        <div class="p2">
+                            <h2>Player 2</h2>
+                            <div class="p2-card ms-row">
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>
+                                <div class="Number2">num</div>  
+                            </div>
+                        </div>
+                        <!--giocatore 3-->
+                        <div class="p3">
+                            <h2>Player 3</h2>
+                            <div class="p3-card ms-row">
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>
+                                <div class="Number3">num</div>  
+                            </div>
+                        </div>
+                        <!--giocatore 4-->
+                        <div class="p4">
+                            <h2>Player 4</h2>
+                            <div class="p4-card ms-row">
+                                <div class="Number4">num</div>
+                                <div class="Number4">num</div>
+                                <div class="Number4">num</div>
+                                <div class="Number4">num</div>
+                                <div class="Number4">num</div>
+                                <div class="Number4">num</div>
+                                <div class="Number4">num</div>
+                                <div class="Number4">num</div>
+                                <div class="Number4">num</div>
+                                <div class="Number4">num</div>  
+                            </div>
                         </div>
                     </div>
-                </div>
+                </div>    
             </div>
 
         </section>
