--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
                     <li class="num-players"><button id="play4">4 Giocatori</button></li>
                 </ul>
             </div>
+        </section>
+        <section id="scelta-cards">
+        
+        
+        </section>    
         <section id="player-cards">
             <div class="container">
                 <!--1 giocatore-->
                 <div class="n-players">
                     <div class="players">
                         <div class="p1">
-                            <h2>Player 1</h2>
-                            <div class="p1-card ms-row">
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>  
+                            <h2 id="p1-name">
+                                scegli un nome
+                                <input type="text" id="name1">
+                                <button id="chose-name1">invia</button>
+                            </h2>
+                            <div id="p1-card">
+                                <!--carta per il gioc-->
                             </div>
                         </div>
                     </div>
@@ -52,34 +52,20 @@
                     <div class="players">
                         <!--giocatore 1-->
                         <div class="p1">
-                            <h2>Player 1</h2>
-                            <div class="p1-card ms-row">
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>  
+                            <h2 id="p1-2-name">scegli un nome
+                                <input type="text" id="name1-2">
+                                <button id="chose-name1-2">invia</button></h2>
+                            <div id="p1-2-card">
+                                  <!--carta per il gioc-->
                             </div>
                         </div>
                         <!--giocatore 2-->
                         <div class="p2">
-                            <h2>Player 2</h2>
-                            <div class="p2-card ms-row">
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>  
+                            <h2 id="p2-name">scegli un nome
+                                <input type="text" id="name2">
+                                <button id="chose-name2">invia</button></h2>
+                            <div id="p2-card">
+                             <!--carta per il gioc-->
                             </div>
                         </div>
                     </div>
@@ -89,8 +75,8 @@
                     <div class="players">
                         <!--giocatore 1-->
                         <div class="p1">
-                            <h2>Player 1</h2>
-                            <div class="p1-card ms-row">
+                            <h2 class="p1-name">Player 1</h2>
+                            <div class="p1-card">
                                 <div class="Number1">num</div>
                                 <div class="Number1">num</div>
                                 <div class="Number1">num</div>
@@ -106,7 +92,7 @@
                         <!--giocatore 2-->
                         <div class="p2">
                             <h2>Player 2</h2>
-                            <div class="p2-card ms-row">
+                            <div class="p2-card">
                                 <div class="Number2">num</div>
                                 <div class="Number2">num</div>
                                 <div class="Number2">num</div>
@@ -122,7 +108,7 @@
                         <!--giocatore 3-->
                         <div class="p3">
                             <h2>Player 3</h2>
-                            <div class="p3-card ms-row">
+                            <div class="p3-card">
                                 <div class="Number3">num</div>
                                 <div class="Number3">num</div>
                                 <div class="Number3">num</div>
@@ -142,8 +128,8 @@
                     <div class="players">
                         <!--giocatore 1-->
                         <div class="p1">
-                            <h2>Player 1</h2>
-                            <div class="p1-card ms-row">
+                            <h2 class="p1-name">Player 1</h2>
+                            <div class="p1-card">
                                 <div class="Number1">num</div>
                                 <div class="Number1">num</div>
                                 <div class="Number1">num</div>
@@ -159,7 +145,7 @@
                         <!--giocatore 2-->
                         <div class="p2">
                             <h2>Player 2</h2>
-                            <div class="p2-card ms-row">
+                            <div class="p2-card">
                                 <div class="Number2">num</div>
                                 <div class="Number2">num</div>
                                 <div class="Number2">num</div>
@@ -175,7 +161,7 @@
                         <!--giocatore 3-->
                         <div class="p3">
                             <h2>Player 3</h2>
-                            <div class="p3-card ms-row">
+                            <div class="p3-card">
                                 <div class="Number3">num</div>
                                 <div class="Number3">num</div>
                                 <div class="Number3">num</div>
@@ -191,7 +177,7 @@
                         <!--giocatore 4-->
                         <div class="p4">
                             <h2>Player 4</h2>
-                            <div class="p4-card ms-row">
+                            <div class="p4-card">
                                 <div class="Number4">num</div>
                                 <div class="Number4">num</div>
                                 <div class="Number4">num</div>
