scelta numero giocatori creata

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
                 </ul>
             </div>
         </section>
-        <section id="scelta-cards">
-        
-        
+        <section id="cpu">
+            <div class="num-table container">
+
+            </div>
         </section>    
         <section id="player-cards">
             <div class="container">
@@ -75,50 +76,29 @@
                     <div class="players">
                         <!--giocatore 1-->
                         <div class="p1">
-                            <h2 class="p1-name">Player 1</h2>
-                            <div class="p1-card">
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>  
+                            <h2 id="p1-3-name">scegli un nome
+                                <input type="text" id="name1-3">
+                                <button id="chose-name1-3">invia</button></h2>
+                            <div id="p1-3-card">
+                                  <!--carta per il gioc-->
                             </div>
                         </div>
                         <!--giocatore 2-->
-                        <div class="p2">
-                            <h2>Player 2</h2>
-                            <div class="p2-card">
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>  
+                        <div class="p1">
+                            <h2 id="p2-3-name">scegli un nome
+                                <input type="text" id="name2-3">
+                                <button id="chose-name2-3">invia</button></h2>
+                            <div id="p2-3-card">
+                                  <!--carta per il gioc-->
                             </div>
                         </div>
                         <!--giocatore 3-->
-                        <div class="p3">
-                            <h2>Player 3</h2>
-                            <div class="p3-card">
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>  
+                        <div class="p1">
+                            <h2 id="p3-name">scegli un nome
+                                <input type="text" id="name3">
+                                <button id="chose-name3">invia</button></h2>
+                            <div id="p3-card">
+                                  <!--carta per il gioc-->
                             </div>
                         </div>
                     </div>
@@ -128,66 +108,38 @@
                     <div class="players">
                         <!--giocatore 1-->
                         <div class="p1">
-                            <h2 class="p1-name">Player 1</h2>
-                            <div class="p1-card">
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>
-                                <div class="Number1">num</div>  
+                            <h2 id="p1-4-name">scegli un nome
+                                <input type="text" id="name1-4">
+                                <button id="chose-name1-4">invia</button></h2>
+                            <div id="p1-4-card">
+                                  <!--carta per il gioc-->
                             </div>
                         </div>
                         <!--giocatore 2-->
-                        <div class="p2">
-                            <h2>Player 2</h2>
-                            <div class="p2-card">
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>
-                                <div class="Number2">num</div>  
+                        <div class="p1">
+                            <h2 id="p2-4-name">scegli un nome
+                                <input type="text" id="name2-4">
+                                <button id="chose-name2-4">invia</button></h2>
+                            <div id="p2-4-card">
+                                  <!--carta per il gioc-->
                             </div>
                         </div>
                         <!--giocatore 3-->
-                        <div class="p3">
-                            <h2>Player 3</h2>
-                            <div class="p3-card">
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>
-                                <div class="Number3">num</div>  
+                        <div class="p1">
+                            <h2 id="p3-4-name">scegli un nome
+                                <input type="text" id="name3-4">
+                                <button id="chose-name3-4">invia</button></h2>
+                            <div id="p3-4-card">
+                                  <!--carta per il gioc-->
                             </div>
                         </div>
                         <!--giocatore 4-->
-                        <div class="p4">
-                            <h2>Player 4</h2>
-                            <div class="p4-card">
-                                <div class="Number4">num</div>
-                                <div class="Number4">num</div>
-                                <div class="Number4">num</div>
-                                <div class="Number4">num</div>
-                                <div class="Number4">num</div>
-                                <div class="Number4">num</div>
-                                <div class="Number4">num</div>
-                                <div class="Number4">num</div>
-                                <div class="Number4">num</div>
-                                <div class="Number4">num</div>  
+                        <div class="p1">
+                            <h2 id="p4-name">scegli un nome
+                                <input type="text" id="name4">
+                                <button id="chose-name4">invia</button></h2>
+                            <div id="p4-card">
+                                  <!--carta per il gioc-->
                             </div>
                         </div>
                     </div>
