generazione tabella numeri

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
             </div>
         </section>
         <section id="cpu">
-            <div class="num-table container">
-
+            <div id="last-number">
+                <!--last number-->
+            </div>
+            <div id="num-table">
+                
             </div>
         </section>    
         <section id="player-cards">
