aggiunta colorazione numeri estratti

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="ms-row">
                 <div class="last">
                     <h2>ultimo numero estratto</h2>
-                    <div id="last-number">1</div>
+                    <div id="last-number"></div>
                     <div>
                         <button id="extract">Estrai</button>
                     </div>
