controllo dati e assegnazione vincitore sistemato

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <h2>Quanti Giocatori?</h2>
                 <ul class="ms-row player-list">
-                    <li class="num-players"><button id="play1">1 Giocatori</button></li>
+                    <li class="num-players"><button id="play1">1 giocatore</button></li>
                     <li class="num-players"><button id="play2">2 Giocatori</button></li>
                     <li class="num-players"><button id="play3">3 Giocatori</button></li>
                     <li class="num-players"><button id="play4">4 Giocatori</button></li>
