--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <section id="cpu">
             <div class="ms-row">
                 <div class="last">
-                    <h2>ultimo numero estratto</h2>
+                    <h2>last-number:</h2>
                     <div id="last-number"></div>
-                    <div>
+                    <div id="extract-btn">
                         <button id="extract">Estrai</button>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <!--giocatore 2-->
-                        <div class="p1">
+                        <div class="p2">
                             <h2 id="p2-3-name">scegli un nome
                                 <input type="text" id="name2-3">
                                 <button id="chose-name2-3">invia</button></h2>
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <!--giocatore 3-->
-                        <div class="p1">
+                        <div class="p3">
                             <h2 id="p3-name">scegli un nome
                                 <input type="text" id="name3">
                                 <button id="chose-name3">invia</button></h2>
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                         <!--giocatore 2-->
-                        <div class="p1">
+                        <div class="p2">
                             <h2 id="p2-4-name">scegli un nome
                                 <input type="text" id="name2-4">
                                 <button id="chose-name2-4">invia</button></h2>
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                         <!--giocatore 3-->
-                        <div class="p1">
+                        <div class="p3">
                             <h2 id="p3-4-name">scegli un nome
                                 <input type="text" id="name3-4">
                                 <button id="chose-name3-4">invia</button></h2>
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                         <!--giocatore 4-->
-                        <div class="p1">
+                        <div class="p4">
                             <h2 id="p4-name">scegli un nome
                                 <input type="text" id="name4">
                                 <button id="chose-name4">invia</button></h2>
@@ -165,10 +165,17 @@
                     </div>
                 </div>    
             </div>
-
         </section>
-            
-        </section>
+        <section id="winner">
+            <div>
+                <h2>Congratulazioni!!</h2>
+                <h1 id="who"></h1>
+                <h2>Hai vinto!</h2>
+                <div>
+                    <button id="play-again" onlclick="location.reload()">Gioca ancora?</button>
+                </div>
+            </div>
+        </section>   
     </main>
 
     <script src="main.js"></script>
