--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                 <h2>Congratulazioni!!</h2>
                 <h1 id="who"></h1>
                 <h2>Hai vinto!</h2>
-                <div>
-                    <button id="play-again" onlclick="location.reload()">Gioca ancora?</button>
+                <div id="again">
+                    <a id="play-again" href="javascript:location.reload(true)">Gioca ancora?</button>
                 </div>
             </div>
         </section>   
