--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 id="title">BINGO!!</h1>
+            <div id="title"><img id="img"src="img/logo.png" alt=""></div>
             <p id="player">da 1 a 4 giocatori</p>    
         </div>
     </header>
