cambio card giocatore 1

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                             <div id="p1-card">
                                 <!--carta per il gioc-->
                             </div>
+                            <div id="gen1">
+                                <button id="gen1-btn">cambia carta</button>
+                            </div>
                         </div>
                     </div>
                 </div>    
