aggiunta la possibilità di cambiare cards

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                             <div id="p1-card">
                                 <!--carta per il gioc-->
                             </div>
-                            <div id="gen1">
+                            <div class="gen1">
                                 <button id="gen1-btn">cambia carta</button>
+                                <button id="confirmC1">conferma carta</button>
                             </div>
                         </div>
                     </div>
@@ -82,6 +83,10 @@
                             <div id="p1-2-card">
                                   <!--carta per il gioc-->
                             </div>
+                            <div class="gen1">
+                                <button id="gen1-2-btn">cambia carta</button>
+                                <button id="confirmC1-2">conferma carta</button>
+                            </div>
                         </div>
                         <!--giocatore 2-->
                         <div class="p2">
@@ -90,6 +95,10 @@
                                 <button id="chose-name2">invia</button></h2>
                             <div id="p2-card">
                              <!--carta per il gioc-->
+                            </div>
+                            <div class="gen1">
+                                <button id="gen2-btn">cambia carta</button>
+                                <button id="confirmC2">conferma carta</button>
                             </div>
                         </div>
                     </div>
@@ -105,6 +114,10 @@
                             <div id="p1-3-card">
                                   <!--carta per il gioc-->
                             </div>
+                            <div class="gen1">
+                                <button id="gen1-3-btn">cambia carta</button>
+                                <button id="confirmC1-3">conferma carta</button>
+                            </div>
                         </div>
                         <!--giocatore 2-->
                         <div class="p2">
@@ -114,6 +127,10 @@
                             <div id="p2-3-card">
                                   <!--carta per il gioc-->
                             </div>
+                            <div class="gen1">
+                                <button id="gen2-3-btn">cambia carta</button>
+                                <button id="confirmC2-3">conferma carta</button>
+                            </div>
                         </div>
                         <!--giocatore 3-->
                         <div class="p3">
@@ -122,6 +139,10 @@
                                 <button id="chose-name3">invia</button></h2>
                             <div id="p3-card">
                                   <!--carta per il gioc-->
+                            </div>
+                            <div class="gen1">
+                                <button id="gen3-btn">cambia carta</button>
+                                <button id="confirmC3">conferma carta</button>
                             </div>
                         </div>
                     </div>
@@ -137,6 +158,10 @@
                             <div id="p1-4-card">
                                   <!--carta per il gioc-->
                             </div>
+                            <div class="gen1">
+                                <button id="gen1-4-btn">cambia carta</button>
+                                <button id="confirmC1-4">conferma carta</button>
+                            </div>
                         </div>
                         <!--giocatore 2-->
                         <div class="p2">
@@ -145,6 +170,10 @@
                                 <button id="chose-name2-4">invia</button></h2>
                             <div id="p2-4-card">
                                   <!--carta per il gioc-->
+                            </div>
+                            <div class="gen1">
+                                <button id="gen2-4-btn">cambia carta</button>
+                                <button id="confirmC2-4">conferma carta</button>
                             </div>
                         </div>
                         <!--giocatore 3-->
@@ -155,6 +184,10 @@
                             <div id="p3-4-card">
                                   <!--carta per il gioc-->
                             </div>
+                            <div class="gen1">
+                                <button id="gen3-4-btn">cambia carta</button>
+                                <button id="confirmC3-4">conferma carta</button>
+                            </div>
                         </div>
                         <!--giocatore 4-->
                         <div class="p4">
@@ -163,6 +196,10 @@
                                 <button id="chose-name4">invia</button></h2>
                             <div id="p4-card">
                                   <!--carta per il gioc-->
+                            </div>
+                            <div class="gen1">
+                                <button id="gen4-btn">cambia carta</button>
+                                <button id="confirmC4">conferma carta</button>
                             </div>
                         </div>
                     </div>
