--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div>
                 <h2>Congratulazioni!!</h2>
                 <h1 id="who"></h1>
-                <h2>Hai vinto!</h2>
+                <h2 id="result"></h2>
                 <div id="again">
                     <a id="play-again" href="javascript:location.reload(true)">Gioca ancora?</button>
                 </div>
