--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
                                 <button id="confirmC1">conferma carta</button>
                             </div>
                         </div>
+                        <!--cpu -->
+                        <div class="p2">
+                            <h2 id="Cpu-name">Cpu</h2>
+                            <div id="Cpu-card"> 
+                                <!--carta per il gioc-->
+                            </div>
+                        </div>
                     </div>
                 </div>    
                 <!--2 giocatori-->
